--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Neuer Verbindungsversuch in $reconnect_duration_in_seconds$ Sekunden",
   "submitDebugLog": "Diagnoseprotokoll",
   "debugLog": "Diagnoseprotokoll",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Debug Protokoll ansehen",
   "goToReleaseNotes": "Versionshinweise",
   "goToSupportPage": "Support",
   "menuReportIssue": "Problem melden",
@@ -112,9 +112,9 @@
   "delete": "Löschen",
   "messageDeletionForbidden": "Ihnen fehlt die Berechtigung, Nachrichten anderer Teilnehmer zu löschen",
   "deleteJustForMe": "Nur für mich löschen",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Für jeden löschen",
+  "deleteMessagesQuestion": "Diese Nachrichten löschen?",
+  "deleteMessageQuestion": "Diese Nachricht löschen?",
   "deleteMessages": "Alle Nachrichten löschen",
   "deleted": "Gelöscht",
   "messageDeletedPlaceholder": "Die Nachricht wurde gelöscht",
@@ -140,7 +140,7 @@
   "copySessionID": "Session-ID kopieren",
   "copyOpenGroupURL": "Gruppen-URL kopieren",
   "save": "Speichern",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Protokoll auf dem Desktop speichern",
   "saved": "Gespeichert",
   "permissions": "Berechtigungen",
   "general": "Allgemein",
@@ -149,8 +149,8 @@
   "linkPreviewsTitle": "Link-Vorschauen Senden",
   "linkPreviewDescription": "Vorschau wird für die meisten URLs unterstützt",
   "linkPreviewsConfirmMessage": "Beim Senden von Link-Vorschauen sind Ihre Metadaten nicht vollständig geschützt.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Mikrofon",
+  "mediaPermissionsDescription": "Erlaube Zugriff zum Mikrofon",
   "spellCheckTitle": "Rechtschreibprüfung",
   "spellCheckDescription": "Rechtschreibprüfung für im Nachrichteneingabefeld eingegebenen Text aktivieren",
   "spellCheckDirty": "Sie müssen Session neu starten, um die neuen Einstellungen zu übernehmen",
@@ -334,7 +334,7 @@
   "createAccount": "Konto Erstellen",
   "signIn": "Einloggen",
   "startInTrayTitle": "Im Infobereich starten",
-  "startInTrayDescription": "Wollen sie Session als minimierten Anwendung starten ",
+  "startInTrayDescription": "Session als minimierten Anwendung starten ",
   "yourUniqueSessionID": "Das ist Ihre Session ID.",
   "allUsersAreRandomly...": "Ihre Session ID ist die eindeutige Adresse, unter der Personen Sie über Session kontaktieren können. Ihre Session ID ist nicht mit Ihrer realen Identität verbunden, völlig anonym und von Natur aus privat.",
   "getStarted": "Loslegen",
@@ -413,7 +413,7 @@
   "unpinConversation": "Unterhaltung abnehmen",
   "pinConversationLimitTitle": "Limit für angeheftete Unterhaltungen",
   "pinConversationLimitToastDescription": "Du kannst höchstens $number$ Unterhaltungen anheften",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Nutzer Details ansehen",
   "latestUnreadIsAbove": "Erste ungelesene Nachricht ist oben",
   "sendRecoveryPhraseTitle": "Wiederherstellungsphrase zusenden",
   "sendRecoveryPhraseMessage": "Mit der Wiederherstellungsphrase kann auf deinen Account zugegriffen werden. Bist du dir sicher das du sie dir zusenden lassen möchtest?",
@@ -422,9 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Möchten Sie Daten nur von diesem Gerät löschen?",
   "dialogClearAllDataDeletionFailedMultiple": "Daten nicht gelöscht von Service Node. Service Node ID: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Möchten Sie nur dieses Gerät entfernen, oder Ihr Konto vollständig löschen?",
-  "deviceOnly": "Nur Geräte",
+  "deviceOnly": "Nur Gerät",
   "entireAccount": "Gesamtes Konto",
-  "areYouSureDeleteDeviceOnly": "Bist du dir sicher dass du deine Gerätedaten löschen willst?",
+  "areYouSureDeleteDeviceOnly": "Sind Sie sicher, dass Sie nur Ihre Gerätedaten löschen wollen?",
   "areYouSureDeleteEntireAccount": "Sind Sie sicher, dass Sie Ihr gesamtes Konto, einschließlich der Daten im Netzwerk, löschen möchten?",
   "iAmSure": "Ich bin mir sicher",
   "recoveryPhraseSecureTitle": "Du bist fast fertig!",
@@ -433,32 +433,32 @@
   "notificationSubtitle": "Benachrichtigungen - $setting$",
   "surveyTitle": "Nimm unsere Session Umfrage an",
   "goToOurSurvey": "Zur Umfrage",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "blockAll": "Alle blockieren",
+  "messageRequests": "Nachrichtenanfragen",
+  "requestsSubtitle": "Ausstehende Anfragen",
+  "requestsPlaceholder": "Keine Anfragen",
+  "messageRequestsDescription": "Nachrichtanfragen aktivieren",
+  "incomingCallFrom": "Eingehender Anruf von '$name$'",
+  "ringing": "Klingelt...",
+  "establishingConnection": "Verbindungsaufbau...",
   "accept": "Akzeptieren",
   "decline": "Ablehnen",
   "endCall": "Anruf beenden",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Sprach-/Videoanruf-Berechtigungen erforderlich",
+  "cameraPermissionNeeded": "In den Datenschutzeinstellungen können Sie die Berechtigung \"Sprach- und Videoanrufe\" aktivieren.",
+  "unableToCall": "Laufenden Anruf zuerst abbrechen",
   "unableToCallTitle": "Neuer Anruf konnte nicht gestartet werden",
   "callMissed": "Entgangener Anruf von $name$",
   "callMissedTitle": "Anruf verpasst",
   "noCameraFound": "Keine Kamera gefunden",
   "noAudioInputFound": "Keine Audioeingabe gefunden",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "Keine Audioausgabe gefunden",
+  "callMediaPermissionsTitle": "Audio- und Videoanrufe",
+  "callMissedCausePermission": "Verpasster Anruf von '$name$', weil Sie die Berechtigung 'Anrufe und Videoanrufe' in den Datenschutzeinstellungen aktivieren müssen.",
+  "callMissedNotApproved": "Anruf von '$name$' fehlt, da Sie diese Unterhaltung noch nicht genehmigt haben. Senden Sie zuerst eine Nachricht an ihn.",
+  "callMediaPermissionsDescription": "Erlaube zugriff zu Sprach und Videoanrufe um Anrufe anzunehmen",
+  "callMediaPermissionsDialogContent": "Die aktuelle Implementierung von Voice/Video Anrufen wird Ihre IP-Adresse den Oxen Foundation Servern und dem Anruf/Anruf-Benutzer übergeben.",
+  "menuCall": "Anrufen",
+  "startedACall": "Du hast $name$ angerufen",
+  "answeredACall": "Anruf mit $name$"
 }
