--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -61,7 +61,7 @@
   "voiceMessage": "پیام صوتی",
   "dangerousFileType": "نوع پیوست به دلایل امنیتی مجاز نیست.",
   "stagedPreviewThumbnail": "پیش نویس پیوند پیش نمایش پیوند برای $domain$",
-  "previewThumbnail": "Thumbnail link preview for $domain$",
+  "previewThumbnail": "پیش نمایش لینک برای $domain$",
   "stagedImageAttachment": "تصویر پیوست پیش نویس: $path$",
   "oneNonImageAtATimeToast": "When including a non-image attachment, the limit is one attachment per message.",
   "cannotMixImageAndNonImageAttachments": "You cannot mix non-image and image attachments in one message.",
@@ -70,10 +70,10 @@
   "unableToLoadAttachment": "ناتوانی در بارگذاری پیوست انتخابی.",
   "offline": "آفلاین",
   "checkNetworkConnection": "ارتباط شبکه خود را چک کنید.",
-  "attemptingReconnection": "Attempting reconnect in $reconnect_duration_in_seconds$ seconds",
+  "attemptingReconnection": "در تلاش برای اتصال مجدد $reconnect_duration_in_seconds$ ثانیه",
   "submitDebugLog": "گزارش خطاء",
   "debugLog": "گزارش خطا",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "نمایش لاگ خطا",
   "goToReleaseNotes": "رفتن به یادداشت های ریلیز",
   "goToSupportPage": "رفتن به صفحه پشتیبانی",
   "menuReportIssue": "گزارش مشکل",
@@ -111,13 +111,13 @@
   "error": "خطا",
   "delete": "پاک کن",
   "messageDeletionForbidden": "شما دسترسی برای حذف پیام دیگران را ندارید",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteJustForMe": "فقط برای من حذف کن",
+  "deleteForEveryone": "حذف برای همه",
+  "deleteMessagesQuestion": "همه این پیام ها حذف شوند؟",
+  "deleteMessageQuestion": "این پیام حذف شود؟",
   "deleteMessages": "حذف پیام‌ها",
   "deleted": "حذف شده",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeletedPlaceholder": "این پیام حذف شده است",
   "from": "از",
   "to": "to",
   "sent": "ارسال شد",
@@ -140,7 +140,7 @@
   "copySessionID": "کپی شناسه‌ی Session",
   "copyOpenGroupURL": "کپی آدرس گروه",
   "save": "ذخیره",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "ذخیره لاگ به دسکتاپ",
   "saved": "ذخیره شده",
   "permissions": "دسترسی ها",
   "general": "عمومی",
@@ -149,8 +149,8 @@
   "linkPreviewsTitle": "ارسال پیش‌نمایش لینک",
   "linkPreviewDescription": "پیش‌نمایش‌ها برای اکثر آدرس‌ها پشتیبانی می‌شوند",
   "linkPreviewsConfirmMessage": "زمانی کی پیش نمایش لینک ها را می فرستید و دریافت می کنید فراداده یا متا دیتای شما محافظت نخواهد شد.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "میکروفن",
+  "mediaPermissionsDescription": "اجازه دسترسی به میکروفون نیاز است",
   "spellCheckTitle": "بررسی املا",
   "spellCheckDescription": "فعال سازی کنترل املاء متن وارد شده در باکس پیام نویسی",
   "spellCheckDirty": "برای اعمال تنظیمات جدید نیاز است Session را دوباره راه‌اندازی کنید",
@@ -219,11 +219,11 @@
   "timerSetTo": "تایمر روی $time$ تنظیم شد",
   "noteToSelf": "یادداشت به خود",
   "hideMenuBarTitle": "پنهان سازی نوار منو",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarDescription": "تغییر نمایش نوار منوی سیستم",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "شماره نامعتبر",
-  "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
+  "failedResolveOns": "در حل نام ONS ناموفق بود",
+  "successUnlinked": "اتصال دستگاه شما با موفقیت قطع شد",
   "autoUpdateSettingTitle": "آپدیت خودکار",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "به‌روزرسانی Session در دسترس است",
@@ -256,14 +256,14 @@
   "userBanned": "User banned successfully",
   "userBanFailed": "مسدود کردن شکست خورد!",
   "leaveGroup": "ترک کردن گروه",
-  "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
+  "leaveAndRemoveForEveryone": "ترک گروه و حذف برای همه",
   "leaveGroupConfirmation": "آیا مطمئن هستید که می‌خواهید این گروه را ترک کنید؟",
   "leaveGroupConfirmationAdmin": "چون شما مدیر این گروه هستید، اگه گروه رو ترک کنید گروه برای همه اعضا حذف میشه. آیا مطمئنید که میخواید این گروه رو ترک کنید؟",
   "cannotRemoveCreatorFromGroup": "این کاربر را نمیشود حذف کرد",
   "cannotRemoveCreatorFromGroupDesc": "شما نمیتوانید این کاربر را حذف کنید زیرا سازنده گروه هستند.",
   "noContactsForGroup": "شما هنوز مخاطبی ندارید",
-  "failedToAddAsModerator": "Failed to add user as moderator",
-  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
+  "failedToAddAsModerator": "کاربر به عنوان مدیر اضافه نشد",
+  "failedToRemoveFromModerator": "کاربر از لیست مدیر حذف نشد",
   "copyMessage": "کپی متن پیام",
   "selectMessage": "انتخاب پیام",
   "editGroup": "ویرایش گروه",
@@ -272,11 +272,11 @@
   "showRecoveryPhrase": "عبارت بازیابی",
   "yourSessionID": "شناسه‌ی Session شما",
   "setAccountPasswordTitle": "تنظیم رمز عبور حساب‌کاربری",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
+  "setAccountPasswordDescription": "برای باز کردن صفحه نمایش نیاز به رمز عبور است. شما هنوز هم می توانید اعلان پیام ها را دریافت کنید در حالی که قفل صفحه نمایش فعال است. تنظیمات اطلاع رسانی اپ به شما این امکان را می دهد که اطلاعاتی را که نمایش داده می شود سفارشی کنید",
   "changeAccountPasswordTitle": "تغییر رمز عبور حساب",
   "changeAccountPasswordDescription": "تغییر گذرواژه",
   "removeAccountPasswordTitle": "حذف رمز عبور حساب‌کاربری",
-  "removeAccountPasswordDescription": "Remove the password associated with your account",
+  "removeAccountPasswordDescription": "حذف رمز عبور مرتبط با حساب شما",
   "enterPassword": "لطفا رمزعبور خود را وارد کنید",
   "confirmPassword": "تأیید کلمه‌ی عبور",
   "pasteLongPasswordToastTitle": "محتوای موجود در کلیپ‌بورد از حد مجاز $max_pwd_len$ کاراکتر فراتر رفته.",
@@ -303,60 +303,60 @@
   "changePasswordTitle": "رمز عبور تغییر کرد",
   "removePasswordTitle": "کلمه‌ی عبور حذف شد",
   "setPasswordToastDescription": "رمز عبور شما ذخیره شد. لطفا آن را در جای امنی ذخیره کنید.",
-  "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
+  "changePasswordToastDescription": "رمز عبور شما تغییر کرد. لطفا آن را در جای امنی نگهداری کنید.",
   "removePasswordToastDescription": "شما رمز عبور خود را حذف کردید.",
-  "publicChatExists": "You are already connected to this open group",
+  "publicChatExists": "شما قبلا به این گروه باز متصل شده اید",
   "connectToServerFail": "امکان پیوستن به گروه نیست",
   "connectingToServer": "در حال اتصال...",
   "connectToServerSuccess": "اتصال به گروه باز موفقیت آمیز بود",
   "setPasswordFail": "تنظیم رمز عبور شکست خورد",
   "passwordLengthError": "طول رمز عبور باید بین ۶ تا ۶۴ کاراکتر باشد",
-  "passwordTypeError": "Password must be a string",
+  "passwordTypeError": "رمز عبور باید متن باشد",
   "passwordCharacterError": "رمز عبور باید فقط شامل حروف، اعداد و نشان ها باشد",
   "remove": "حذف",
-  "invalidSessionId": "Invalid Session ID",
-  "invalidPubkeyFormat": "Invalid Pubkey Format",
-  "emptyGroupNameError": "Please enter a group name",
+  "invalidSessionId": "شناسه‌ی Session نامعتبر است",
+  "invalidPubkeyFormat": "فرمت Pubkey نامعتبر",
+  "emptyGroupNameError": "لطفا یک نام برای گروه وارد کنید",
   "editProfileModalTitle": "نمایه",
   "groupNamePlaceholder": "نام گروه",
   "inviteContacts": "دعوت مخاطبین",
   "addModerators": "اضافه کردن مدیر",
   "removeModerators": "حذف کردن مدیر",
   "addAsModerator": "Add As Moderator",
-  "removeFromModerators": "Remove From Moderators",
+  "removeFromModerators": "حذف از مدیران",
   "add": "اضافه کردن",
-  "addingContacts": "Adding contacts to $name$",
+  "addingContacts": "افزودن مخاطبین به $name$",
   "noContactsToAdd": "مخاطبی برای اضافه کردن وجود ندارد",
-  "noMembersInThisGroup": "No other members in this group",
+  "noMembersInThisGroup": "هیچ عضو دیگری در این گروه نیست",
   "noModeratorsToRemove": "مدیری برای حذف کردن وجود ندارد",
   "onlyAdminCanRemoveMembers": "شما موسس گروه نیستید",
   "onlyAdminCanRemoveMembersDesc": "فقط موسس گروه میتواند کاربران را حذف کند",
   "createAccount": "Create Account",
   "signIn": "ثبت نام",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
-  "yourUniqueSessionID": "Say hello to your Session ID",
-  "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
+  "startInTrayTitle": "باز کردن در حالت Tray",
+  "startInTrayDescription": "باز کردن Session به عنوان یک اپ فشرده شده ",
+  "yourUniqueSessionID": "به شناسه‌ی Session خود سلام کنید",
+  "allUsersAreRandomly...": "شناسه‌ی Session شما آدرس منحصر به فردی است که افراد می‌توانند از طریق آن با شما در Session تماس بگیرند. شناسه‌ی Session شما، بدون هیچ ارتباطی با هویت واقعی شما، کاملاً ناشناس و خصوصی است.",
   "getStarted": "شروع به کار کنید",
-  "createSessionID": "Create Session ID",
+  "createSessionID": "ساخت شناسه‌ی Session",
   "recoveryPhrase": "عبارت بازیابی",
   "enterRecoveryPhrase": "عبارت بازیابی خود را وارد کنید",
   "displayName": "نمایش نام",
   "anonymous": "ناشناس",
-  "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
+  "removeResidueMembers": "با کلیک بر روی ok آن اعضا را در حالی که گروه را ترک می کردند حذف کنید.",
   "enterDisplayName": "یک نام نمایشی وارد کنید",
   "enterOptionalPassword": "رمز عبور وارد کنید (اختیاری)",
-  "continueYourSession": "Continue Your Session",
-  "linkDevice": "Link Device",
+  "continueYourSession": "در Session بمانید",
+  "linkDevice": "اتصال دستگاه",
   "restoreUsingRecoveryPhrase": "حساب خود را بازیابی کنید",
   "or": "یا",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
-  "beginYourSession": "Begin your Session.",
-  "welcomeToYourSession": "Welcome to your Session",
-  "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "ByUsingThisService...": "با استفاده از این سرویس، شما با ما موافقت می کنید که <a href=\"https://getsession.org/legal/#tos\">شرایط خدمات</a> و <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">سیاست حفظ حریم خصوصی</a> را قبول کرده اید",
+  "beginYourSession": "Session خود را شروع کنید.",
+  "welcomeToYourSession": "به Session خوش آمدید",
+  "newSession": "Session جدید",
+  "searchFor...": "جستجو در مکالمات یا مخاطبین",
   "enterSessionID": "شناسه‌ی Session را وارد کنید",
-  "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
+  "enterSessionIDOfRecipient": "شناسه Session یا نام ONS گیرنده را وارد کنید",
   "usersCanShareTheir...": "کاربران می‌توانند شناسه‌ی Session خود را با رفتن به تنظیمات حساب خود و ضربه به \"Share Session ID\" یا با به اشتراک گذاشتن کد QR خود‌ با دیگران، آن را با هم به اشتراک بگذارند.",
   "message": "پیام",
   "appearanceSettingsTitle": "ظاهر برنامه",
@@ -384,19 +384,19 @@
   "helpUsTranslateSession": "به ما کمک کنید که Session را ترجمه کنیم",
   "translation": "ترجمه",
   "closedGroupInviteFailTitle": "دعوت به گروه ناموفق بود",
-  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
-  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
-  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteFailTitlePlural": "دعوت های گروهی ناموفق بود",
+  "closedGroupInviteFailMessage": "امکان دعوت یک عضو به گروه نیست",
+  "closedGroupInviteFailMessagePlural": "امکان دعوت همه اعضای گروه نیست",
   "closedGroupInviteOkText": "امتحان دوباره دعوت ها",
-  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
-  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
-  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "closedGroupInviteSuccessTitlePlural": "دعوت های گروهی کامل شد",
+  "closedGroupInviteSuccessTitle": "دعوت گروهی موفق بود",
+  "closedGroupInviteSuccessMessage": "با موفقیت اعضای گروه بسته دعوت شدند",
   "notificationForConvo": "اعلان‌ها",
   "notificationForConvo_all": "همه",
   "notificationForConvo_disabled": "غیرفعال شده",
-  "notificationForConvo_mentions_only": "Mentions only",
+  "notificationForConvo_mentions_only": "فقط منشن شده ها",
   "onionPathIndicatorTitle": "مسیر",
-  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "onionPathIndicatorDescription": "اپ Session، ‌آی‌پی شما را با استفاده از فرستادن پیام‌های‌تان از طریق چندین سرویسِ گره در شبکه غیرمتمرکز Session مخفی می‌کند. اینها کشورهایی هستند که اتصال شما در حال حاضر از طریق آن فراخوانی می‌شوند:",
   "unknownCountry": "کشور ناشناخته",
   "device": "دستگاه",
   "destination": "مقصد",
@@ -413,7 +413,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "محدودیت سنجاق کردن گفتگوها",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "نمایش جزئیات کاربر",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -426,39 +426,39 @@
   "entireAccount": "تمام حساب",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
   "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "iAmSure": "مطمئنم",
   "recoveryPhraseSecureTitle": "تقریبا کار شما تمومه!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "اعلان ها - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
+  "blockAll": "مسدود کردن همه",
+  "messageRequests": "پیام درخواست ها",
+  "requestsSubtitle": "درخواست‌های در حال انتظار",
+  "requestsPlaceholder": "هیچ درخواستی وجود ندارد",
   "messageRequestsDescription": "Enable Message Request Inbox",
   "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
+  "ringing": "در حال تماس...",
+  "establishingConnection": "در حال برقراری ارتباط...",
+  "accept": "قبول تماس",
+  "decline": "رد تماس",
+  "endCall": "پایان تماس",
   "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
   "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
   "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found",
+  "callMissed": "تماس از دست رفته از $name$",
+  "callMissedTitle": "تماس های از دست رفته",
+  "noCameraFound": "هیچ دوربینی یافت نشد",
+  "noAudioInputFound": "هيچ ورودی صوتي يافت نشد",
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "menuCall": "تماس",
+  "startedACall": "تماس شما با $name$",
+  "answeredACall": "تماس با $name$"
 }
