--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -380,10 +380,10 @@
   "noBlockedContacts": "Tidak ada kontak yang diblokir",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "orJoinOneOfThese": "Or join one of these...",
-  "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
-  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "orJoinOneOfThese": "Atau gabung salah satu dari ini...",
+  "helpUsTranslateSession": "Bantu kami menerjemahkan Session",
+  "translation": "Terjemahan",
+  "closedGroupInviteFailTitle": "Undangan grup gagal",
   "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
   "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
   "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
@@ -401,7 +401,7 @@
   "device": "Device",
   "destination": "Destination",
   "learnMore": "Learn more",
-  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningTitle": "Buka tautan ini di peramban Anda?",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
   "open": "Open",
   "audioMessageAutoplayTitle": "Audio Message Autoplay",
