--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -29,8 +29,8 @@
   "viewMenuZoomOut": "縮小",
   "viewMenuToggleFullScreen": "フルスクリーンを切り替える",
   "viewMenuToggleDevTools": "開発者ツールを切り替える",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
+  "contextMenuNoSuggestions": "候補はありません",
+  "openGroupInvitation": "公開グループからの招待",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$に参加しますか？",
   "joinOpenGroupAfterInvitationConfirmationDesc": "$roomName$の公開グループに参加しますか？",
   "enterSessionIDOrONSName": "Session ID か ONS 名を入力してください",
@@ -118,8 +118,8 @@
   "deleteMessages": "メッセージを削除",
   "deleted": "メッセージが削除されました",
   "messageDeletedPlaceholder": "This message has been deleted",
-  "from": "From:",
-  "to": "To:",
+  "from": "差出人:",
+  "to": "宛先:",
   "sent": "送信",
   "received": "受信",
   "sendMessage": "メッセージ",
@@ -140,11 +140,11 @@
   "copySessionID": "Session ID をコピー",
   "copyOpenGroupURL": "グループのURLをコピー",
   "save": "保存",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "デスクトップにログを保存",
   "saved": "保存済み",
   "permissions": "アクセス許可",
   "general": "一般",
-  "tookAScreenshot": "$name$ took a screenshot",
+  "tookAScreenshot": "$name$はスクリーンショットを撮りました。",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "リンクプレビューを送る",
   "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
