--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -43,7 +43,7 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessage": "읽지 않은 메시지",
   "unreadMessages": "읽지 않은 메시지",
-  "debugLogExplanation": "This log will be posted publicly online for contributors to view. You may examine and edit it before submitting.",
+  "debugLogExplanation": "This log can be saved on your desktop folder.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "문제 보고",
   "gotIt": "Got it!",
@@ -92,9 +92,9 @@
   "downloadAttachment": "Download Attachment",
   "replyToMessage": "Reply to Message",
   "replyingToMessage": "답장 중",
-  "originalMessageNotFound": "Original message not found",
-  "originalMessageNotAvailable": "Original message no longer available",
-  "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
+  "originalMessageNotFound": "원본 메시지를 찾을 수 없음",
+  "originalMessageNotAvailable": "원본 메시지를 볼 수 없음",
+  "messageFoundButNotLoaded": "원본 메시지를 찾았으나 로딩이 안 되어있습니다. 위로 스크롤하여 로딩하십시오.",
   "recording": "녹음 중",
   "you": "당신",
   "audioPermissionNeededTitle": "Microphone access required",
@@ -102,16 +102,16 @@
   "audio": "오디오",
   "video": "동영상",
   "photo": "사진",
-  "cannotUpdate": "Cannot Update",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdate": "업데이트 불가능",
+  "cannotUpdateDetail": "Session 데스크탑 업데이트에 실패하였으나, 새로운 버전으로 업데이트가 가능합니다. https://getsession.org/ 에 들어가셔서, 새로운 버전을 직접 다운로드받으신 뒤, 이 문제에 대하여 지원팀을 연락하거나 버그를 제보하십시오.",
   "ok": "예",
   "cancel": "취소",
   "close": "닫기",
   "continue": "계속",
   "error": "에러",
   "delete": "지우기",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
+  "messageDeletionForbidden": "다른 사람의 메시지를 삭제할 수 있는 권한이 없습니다.",
+  "deleteJustForMe": "자기 자신만 안 보이게 삭제",
   "deleteForEveryone": "모두에게서 삭제",
   "deleteMessagesQuestion": "Delete those messages?",
   "deleteMessageQuestion": "이 메시지를 삭제하시겠습니까?",
@@ -128,7 +128,7 @@
   "resend": "재전송",
   "deleteConversationConfirmation": "Permanently delete this conversation?",
   "clearAllData": "모든 데이터 삭제",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "계정을 삭제하면 영구적으로 메시지와 연락처를 삭제합니다.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
