--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -61,7 +61,7 @@
   "voiceMessage": "Mesaj vocal",
   "dangerousFileType": "Tipul de atașament nu este permis din motive de securitate",
   "stagedPreviewThumbnail": "Previzualizare link miniatură pentru $domain$",
-  "previewThumbnail": "Previzualizarea link-ului miniatură pentru $domain$",
+  "previewThumbnail": "Previzualizare link miniatură pentru $domain$",
   "stagedImageAttachment": "Atașament imagine ciornă: $path$",
   "oneNonImageAtATimeToast": "When including a non-image attachment, the limit is one attachment per message.",
   "cannotMixImageAndNonImageAttachments": "You cannot mix non-image and image attachments in one message.",
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Se încearcă reconectarea în $reconnect_duration_in_seconds$ secunde",
   "submitDebugLog": "Jurnal depanare",
   "debugLog": "Jurnalul de depanare",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Arată jurnalul de depanare",
   "goToReleaseNotes": "Mergi la Notele de Lansare",
   "goToSupportPage": "Mergi la Pagina de Suport",
   "menuReportIssue": "Raportează o problemă",
@@ -111,13 +111,13 @@
   "error": "Eroare",
   "delete": "Șterge",
   "messageDeletionForbidden": "Nu aveţi permisiunea de a şterge mesajele altora",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteJustForMe": "Șterge doar pentru mine",
+  "deleteForEveryone": "Șterge pentru toată lumea",
+  "deleteMessagesQuestion": "Ștergi acele mesaje?",
+  "deleteMessageQuestion": "Ștergi acest mesaj?",
   "deleteMessages": "Șterge mesajele",
   "deleted": "Șters",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeletedPlaceholder": "Acest mesaj a fost șters",
   "from": "De la",
   "to": "către",
   "sent": "Trimis",
@@ -128,7 +128,7 @@
   "resend": "Retrimite",
   "deleteConversationConfirmation": "Şterg permanent acestă conversație?",
   "clearAllData": "Șterge toate datele",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Mesajele și contactele vor fi șterse definitiv.",
   "deleteContactConfirmation": "Sunteți sigur că vreți să ștergeți această conversație?",
   "quoteThumbnailAlt": "Pictograma imaginii din mesajul citat",
   "imageAttachmentAlt": "Imagine atașată la mesaj",
@@ -140,7 +140,7 @@
   "copySessionID": "Copiază ID-ul Session",
   "copyOpenGroupURL": "Copiază URL-ul grupului",
   "save": "Salvează",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Salvează jurnalul pe desktop",
   "saved": "Salvat",
   "permissions": "Permisiuni",
   "general": "General",
@@ -148,9 +148,9 @@
   "savedTheFile": "Media salvată de $name$",
   "linkPreviewsTitle": "Trimite Previzualizări Link",
   "linkPreviewDescription": "Previzualizările sunt suportate pentru majoritatea adreselor URL",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "linkPreviewsConfirmMessage": "Nu veți avea protecție completă asupra metadatelor atunci când trimiteți sau primiți previzualizări ale link-ului.",
+  "mediaPermissionsTitle": "Microfon",
+  "mediaPermissionsDescription": "Permiteți accesul la microfon",
   "spellCheckTitle": "Verificare ortografie",
   "spellCheckDescription": "Activează verificarea ortografică a textului introdus în caseta de compoziție a mesajului",
   "spellCheckDirty": "Trebuie să reporniți Session pentru a aplica noile setări",
@@ -302,58 +302,58 @@
   "setPasswordTitle": "Setează parola",
   "changePasswordTitle": "Schimbã Parola",
   "removePasswordTitle": "Parola a fost eliminată",
-  "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
-  "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
-  "publicChatExists": "You are already connected to this open group",
-  "connectToServerFail": "Couldn't join group",
-  "connectingToServer": "Connecting...",
-  "connectToServerSuccess": "Successfully connected to open group",
-  "setPasswordFail": "Failed to set password",
-  "passwordLengthError": "Password must be between 6 and 64 characters long",
-  "passwordTypeError": "Password must be a string",
-  "passwordCharacterError": "Password must only contain letters, numbers and symbols",
-  "remove": "Remove",
-  "invalidSessionId": "Invalid Session ID",
-  "invalidPubkeyFormat": "Invalid Pubkey Format",
-  "emptyGroupNameError": "Please enter a group name",
-  "editProfileModalTitle": "Profile",
-  "groupNamePlaceholder": "Group Name",
-  "inviteContacts": "Invite Contacts",
-  "addModerators": "Add Moderators",
-  "removeModerators": "Remove Moderators",
+  "setPasswordToastDescription": "Parola ta a fost setată. Țîne-o într-un loc sigur te rugam.",
+  "changePasswordToastDescription": "Parola ta a fost schimbată. Te rugăm să o păstrezi în siguranță.",
+  "removePasswordToastDescription": "Ai șters parola.",
+  "publicChatExists": "Ești deja conectat la aceast grup public",
+  "connectToServerFail": "Nu s-a putut adăuga grupul",
+  "connectingToServer": "Se conectează...",
+  "connectToServerSuccess": "Conectat cu succes la grupul public",
+  "setPasswordFail": "Eroare la setarea parolei",
+  "passwordLengthError": "Parola trebuie să aibă între 6 și 64 de caractere lungime",
+  "passwordTypeError": "Acest câmp trebuie să fie un şir de caractere",
+  "passwordCharacterError": "Parola poate conține doar litere, numere și simboluri simple",
+  "remove": "Elimină",
+  "invalidSessionId": "Identificator sesiune nevalid",
+  "invalidPubkeyFormat": "Formatul de număr Pubkey nu este valid",
+  "emptyGroupNameError": "Te rugăm să introduci un nume de grup",
+  "editProfileModalTitle": "Profil",
+  "groupNamePlaceholder": "Numele Grupului",
+  "inviteContacts": "Invită contacte",
+  "addModerators": "Adaugă moderatori",
+  "removeModerators": "Scoate moderatori",
   "addAsModerator": "Add As Moderator",
-  "removeFromModerators": "Remove From Moderators",
-  "add": "Add",
-  "addingContacts": "Adding contacts to $name$",
-  "noContactsToAdd": "No contacts to add",
-  "noMembersInThisGroup": "No other members in this group",
-  "noModeratorsToRemove": "no moderators to remove",
-  "onlyAdminCanRemoveMembers": "You are not the creator",
-  "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
+  "removeFromModerators": "Scoate din moderatori",
+  "add": "Adaugă",
+  "addingContacts": "Se adaugă contacte la $name$",
+  "noContactsToAdd": "Nu există contacte de adăugat",
+  "noMembersInThisGroup": "Nici un membru în acest grup",
+  "noModeratorsToRemove": "nici un moderator de eliminat",
+  "onlyAdminCanRemoveMembers": "Nu ești creatorul grupului",
+  "onlyAdminCanRemoveMembersDesc": "Doar creatorul grupului poate elimina utilizatori",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
-  "yourUniqueSessionID": "Say hello to your Session ID",
-  "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
-  "getStarted": "Get started",
-  "createSessionID": "Create Session ID",
-  "recoveryPhrase": "Recovery Phrase",
-  "enterRecoveryPhrase": "Enter your recovery phrase",
-  "displayName": "Display Name",
-  "anonymous": "Anonymous",
+  "signIn": "Conectare",
+  "startInTrayTitle": "Începe în panou",
+  "startInTrayDescription": "Începe sesiunea cu aplicația minimizată ",
+  "yourUniqueSessionID": "Salută-ți ID-ul tău de sesiune",
+  "allUsersAreRandomly...": "ID-ul de sesiune este adresa ta unică pe care persoanele o pot folosi pentru a te contacta în sesiune. Fără nicio conexiune la identitatea ta reală, ID-ul sesiunii tale este complet anonim și privat prin design.",
+  "getStarted": "Începe",
+  "createSessionID": "Crează Sesiune ID",
+  "recoveryPhrase": "Frază de recuperare",
+  "enterRecoveryPhrase": "Introdu fraza de recuperare",
+  "displayName": "Nume afişat",
+  "anonymous": "Anonim",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
-  "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
-  "continueYourSession": "Continue Your Session",
-  "linkDevice": "Link Device",
-  "restoreUsingRecoveryPhrase": "Restore your account",
-  "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
-  "beginYourSession": "Begin your Session.",
-  "welcomeToYourSession": "Welcome to your Session",
-  "newSession": "New Session",
+  "enterDisplayName": "Alege un nume de afișat",
+  "enterOptionalPassword": "Introdu parola (opțional)",
+  "continueYourSession": "Continuă sesiunea",
+  "linkDevice": "Conectează-te cu un alt dispozitiv",
+  "restoreUsingRecoveryPhrase": "Recuperează-ți contul",
+  "or": "sau",
+  "ByUsingThisService...": "Utilizând acest serviciu, ești de acord cu <a href=\"https://getsession.org/legal/#tos\">Termenii și condițiile</a> și cu <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politica de confidențialitate</a>",
+  "beginYourSession": "Începe sesiunea.",
+  "welcomeToYourSession": "Bine ai venit pe Session",
+  "newSession": "Sesiune nouă",
   "searchFor...": "Căutați conversații sau contacte",
   "enterSessionID": "Introduceți ID-ul Session",
   "enterSessionIDOfRecipient": "Introduceți ID-ul Session sau numele ONS al destinatarului",
@@ -408,57 +408,57 @@
   "audioMessageAutoplayDescription": "Redă automat mesajele audio trimise consecutiv",
   "clickToTrustContact": "Apasă pentru a descărca media",
   "trustThisContactDialogTitle": "Aveți încredere în $name$?",
-  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
-  "pinConversation": "Pin Conversation",
+  "trustThisContactDialogDescription": "Ești sigur că vrei să descarci fișiere multimedia trimise de $name$?",
+  "pinConversation": "Fixare conversație",
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
-  "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
+  "showUserDetails": "Arată detaliile utilizatorului",
+  "latestUnreadIsAbove": "Primul mesaj necitit este mai sus",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitle": "Datele nu au fost șterse",
+  "dialogClearAllDataDeletionFailedDesc": "Datele nu au fost șterse din cauza unei erori necunoscute. Doriți să ștergeți datele doar de pe acest dispozitiv?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
+  "deviceOnly": "Numai pe dispozitiv",
+  "entireAccount": "Întreg contul",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
   "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "iAmSure": "Sunt sigur",
+  "recoveryPhraseSecureTitle": "Aproape ai terminat!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$",
+  "notificationSubtitle": "Notificări - $setting$",
   "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
+  "goToOurSurvey": "Spre chestionar",
   "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
+  "messageRequests": "Solicitări mesaj",
+  "requestsSubtitle": "Cereri în așteptare",
+  "requestsPlaceholder": "Nicio cerere",
   "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "incomingCallFrom": "Primire apel de la '$name$'",
+  "ringing": "Sună...",
+  "establishingConnection": "Stabilire conexiune...",
   "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "decline": "Respinge",
+  "endCall": "Închide apelul",
+  "cameraPermissionNeededTitle": "Permisiuni pentru apeluri vocale/video necesare",
   "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
   "unableToCall": "Cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "unableToCallTitle": "Nu se poate iniția apelul",
+  "callMissed": "Apel nepreluat de la $name$",
+  "callMissedTitle": "Apel pierdut",
+  "noCameraFound": "Nu s-a găsit camera",
+  "noAudioInputFound": "Nu s-a detectat nicio sursă audio",
+  "noAudioOutputFound": "Nu s-a detectat nicio ieșire audio",
+  "callMediaPermissionsTitle": "Apeluri audio şi video",
+  "callMissedCausePermission": "Apel pierdut de la „$name$” deoarece trebuie să oferi permisiunea pentru „Apeluri vocale și video” din setările de confidențialitate.",
+  "callMissedNotApproved": "Apel pierdut de la '$name$' deoarece nu ai aprobat încă această conversație. Trimite-i un mesaj mai întâi.",
+  "callMediaPermissionsDescription": "Permite accesul la apeluri vocale și video de la alți utilizatori",
+  "callMediaPermissionsDialogContent": "Implementarea curentă a apelurilor vocale/video va expune adresa ta IP la serverele Fundației Oxen, precum și numele utilizatorului apelant si cel apelat.",
+  "menuCall": "Apelează",
+  "startedACall": "Ai sunat pe $name$",
+  "answeredACall": "Apel cu $name$"
 }
