--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -77,7 +77,7 @@
   "goToReleaseNotes": "Gå til udgivelsesnoter",
   "goToSupportPage": "Gå til supportsiden",
   "menuReportIssue": "Indmeld en fejl",
-  "about": "About",
+  "about": "Om",
   "speech": "Tale",
   "show": "Vis",
   "sessionMessenger": "Session",
@@ -86,7 +86,7 @@
   "conversationsHeader": "Samtaler",
   "contactsHeader": "Kontakter",
   "messagesHeader": "Beskeder",
-  "settingsHeader": "Settings",
+  "settingsHeader": "Indstillinger",
   "typingAlt": "Skrive animation for denne samtale",
   "contactAvatarAlt": "Avatar for kontakt $name$",
   "downloadAttachment": "Hent vedhæftet fil",
@@ -95,40 +95,40 @@
   "originalMessageNotFound": "Original besked ikke fundet",
   "originalMessageNotAvailable": "Original besked er ikke længere tilgængelig",
   "messageFoundButNotLoaded": "Original besked fundet, men ikke indlæst. Rul op for at indlæse den.",
-  "recording": "Recording",
+  "recording": "Optagelse",
   "you": "Dig",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "For at sende talebeskeder skal du lade Session Desktop få adgang til din mikrofon.",
   "audio": "Lyd",
   "video": "Video",
   "photo": "Billede",
-  "cannotUpdate": "Cannot Update",
+  "cannotUpdate": "Kan ikke opdatere",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "Ok",
   "cancel": "Afbryd",
-  "close": "Close",
-  "continue": "Continue",
+  "close": "Luk",
+  "continue": "Fortsæt",
   "error": "Fejl",
   "delete": "Slet",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteJustForMe": "Slet - kun for mig",
+  "deleteForEveryone": "Slet for alle",
+  "deleteMessagesQuestion": "Slet disse beskeder?",
+  "deleteMessageQuestion": "Slet denne besked?",
   "deleteMessages": "Slet beskeder",
-  "deleted": "Deleted",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "deleted": "Slettet",
+  "messageDeletedPlaceholder": "Denne besked er slettet",
   "from": "Fra",
   "to": "til",
   "sent": "Sendt",
   "received": "Modtaget",
   "sendMessage": "Send en besked",
   "groupMembers": "Gruppemedlemmer",
-  "moreInformation": "More information",
-  "resend": "Resend",
+  "moreInformation": "Mere information",
+  "resend": "Send igen",
   "deleteConversationConfirmation": "Slet samtale permanent?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "clearAllData": "Slet alle data",
+  "deleteAccountWarning": "Alle dine beskeder og kontakter slettes.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Miniatur af billede fra citeret besked",
   "imageAttachmentAlt": "Billede vedhæftet til beskeden",
@@ -136,24 +136,24 @@
   "lightboxImageAlt": "Billede sendt i samtale",
   "imageCaptionIconAlt": "Ikon, der viser, at dette billede har en billedtekst",
   "addACaption": "Tilføj en billedtekst...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copy": "Kopier",
+  "copySessionID": "Kopier Session ID",
+  "copyOpenGroupURL": "Kopier Gruppe URL",
   "save": "Gem",
-  "saveLogToDesktop": "Save log to desktop",
-  "saved": "Saved",
+  "saveLogToDesktop": "Gemt til desktop",
+  "saved": "Gemt",
   "permissions": "Tilladelser",
   "general": "Generelt",
-  "tookAScreenshot": "$name$ took a screenshot",
-  "savedTheFile": "Media saved by $name$",
-  "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
-  "spellCheckTitle": "Spell Check",
+  "tookAScreenshot": "$name$ kopierede skærmbillede",
+  "savedTheFile": "Medie gemt af $name$",
+  "linkPreviewsTitle": "Send Link Preview",
+  "linkPreviewDescription": "Previews er understøttet af de fleste Urls",
+  "linkPreviewsConfirmMessage": "Du har ikke fuld beskyttelse af metadata når du sender link previews.",
+  "mediaPermissionsTitle": "Mikrofon",
+  "mediaPermissionsDescription": "Tillad adgang til din mikrofon",
+  "spellCheckTitle": "Stavekontrol",
   "spellCheckDescription": "Aktiver stavekontrol af beskeder",
-  "spellCheckDirty": "You must restart Session to apply your new settings",
+  "spellCheckDirty": "Du skal genstarte Session før dine nye indstillinger virker",
   "notifications": "Meddelelser",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
@@ -178,7 +178,7 @@
   "timestamp_m": "1 minut",
   "timestamp_h": "1 time",
   "timestampFormat_M": "MMM D",
-  "messageBodyMissing": "Please enter a message body.",
+  "messageBodyMissing": "Skriv indhold at besked.",
   "unblockToSend": "Fjern blokering af denne kontakt for at sende en besked.",
   "unblockGroupToSend": "Fjern blokering af denne gruppe for at sende en besked.",
   "youChangedTheTimer": "Beskeder sat til at udløbe efter $time$",
@@ -197,10 +197,10 @@
   "timerOption_1_day": "1 dag",
   "timerOption_1_week": "1 uge",
   "disappearingMessages": "Beskeder der forsvinder",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "Ændre dit brugernavn",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "Nyt brugernavn",
+  "changeNicknameMessage": "Skriv brugernavn for denne bruger",
   "timerOption_0_seconds_abbreviated": "fra",
   "timerOption_5_seconds_abbreviated": "5s",
   "timerOption_10_seconds_abbreviated": "10s",
@@ -255,7 +255,7 @@
   "banUserAndDeleteAll": "Ban and Delete All",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
-  "leaveGroup": "Leave Group",
+  "leaveGroup": "Forlad gruppe",
   "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave this group?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
@@ -263,24 +263,24 @@
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
   "noContactsForGroup": "You don't have any contacts yet",
   "failedToAddAsModerator": "Failed to add user as moderator",
-  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
-  "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
-  "editGroup": "Edit group",
-  "editGroupName": "Edit group name",
-  "updateGroupDialogTitle": "Updating $name$...",
+  "failedToRemoveFromModerator": "Fjernelse af bruger fra moderator liste er fejlet",
+  "copyMessage": "Kopier besked tekst",
+  "selectMessage": "Vælg besked",
+  "editGroup": "Ret gruppe",
+  "editGroupName": "Ret gruppenavn",
+  "updateGroupDialogTitle": "Opdaterer $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
-  "yourSessionID": "Your Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
+  "yourSessionID": "Din Session ID",
+  "setAccountPasswordTitle": "Opret Kontor kodeord",
+  "setAccountPasswordDescription": "Kræv kodeord for at åbne Session's vindue. Du kan stadig modtage notifikationer mens vinduet er låst. Session's notifikationer tillader dig at bestemme hvilken information der vises",
   "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change your password",
-  "removeAccountPasswordTitle": "Remove Account Password",
-  "removeAccountPasswordDescription": "Remove the password associated with your account",
+  "changeAccountPasswordDescription": "Skift kodeord",
+  "removeAccountPasswordTitle": "Fjern konto kodeord",
+  "removeAccountPasswordDescription": "Fjern det kodeord der er associeret til din konto",
   "enterPassword": "Please enter your password",
-  "confirmPassword": "Confirm password",
+  "confirmPassword": "Bekræft kodeord",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
-  "showRecoveryPhrasePasswordRequest": "Please enter your password",
+  "showRecoveryPhrasePasswordRequest": "Indtast dit kodeord",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
   "copiedToClipboard": "Copied to clipboard",
