--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Yeniden bağlantı kurma $reconnect_duration_in_seconds$ saniye içerisinde tekrar denenecektir.",
   "submitDebugLog": "Hata ayıklama günlüğü",
   "debugLog": "Hata Ayıklama Günlüğü",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Hata Ayıklama Günlüğünü Göster",
   "goToReleaseNotes": "Sürüm Notlarına Git",
   "goToSupportPage": "Destek Sayfasına Git",
   "menuReportIssue": "Sorun Bildir",
@@ -103,21 +103,21 @@
   "video": "Video",
   "photo": "Fotoğraf",
   "cannotUpdate": "Güncellenemiyor",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdateDetail": "Session masaüstü uygulaması güncellenemedi, ancak yeni bir sürüm mevcut. Lütfen https://getsession.org/ adresine gidin ve yeni sürümü el ile yükleyin, ardından destek ile iletişime geçin veya bu sorunu bildirin.",
   "ok": "TAMAM",
   "cancel": "İptal",
   "close": "Kapat",
   "continue": "Devam Et",
   "error": "Hata",
   "delete": "Sil",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "messageDeletionForbidden": "Başkalarının iletilerini silme izniniz yok",
+  "deleteJustForMe": "Sadece benim için sil",
+  "deleteForEveryone": "Herkes için sil",
+  "deleteMessagesQuestion": "Bu iletiler silinsin mi?",
+  "deleteMessageQuestion": "Bu ileti silinsin mi?",
   "deleteMessages": "İletileri sil",
   "deleted": "Silindi",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeletedPlaceholder": "Bu ileti silindi",
   "from": "Gönderen",
   "to": "alıcı",
   "sent": "Gönderildi",
@@ -127,9 +127,9 @@
   "moreInformation": "Daha fazla bilgi",
   "resend": "Tekrar gönder",
   "deleteConversationConfirmation": "Bu sohbeti kalıcı olarak sil?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "clearAllData": "Tüm Veriyi Temizle",
+  "deleteAccountWarning": "Bu işlem iletilerinizi ve kişilerinizi kalıcı olarak siler.",
+  "deleteContactConfirmation": "Bu konuşmayı silmek istediğinizden emin misiniz?",
   "quoteThumbnailAlt": "Alıntılanmış iletideki görüntünün önizlemesi",
   "imageAttachmentAlt": "İletiye görüntü eklenmiş",
   "videoAttachmentAlt": "İletiye eklenen videonun ekran görüntüsü",
@@ -138,18 +138,18 @@
   "addACaption": "Bir başlık ekleyin...",
   "copy": "Kopyala",
   "copySessionID": "Session Kimliğini Kopyala",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copyOpenGroupURL": "Grubun URL'sini Kopyala",
   "save": "Kaydet",
-  "saveLogToDesktop": "Save log to desktop",
-  "saved": "Saved",
+  "saveLogToDesktop": "Günlüğü masaüstüne kaydet",
+  "saved": "Kaydedildi",
   "permissions": "İzinler",
   "general": "Genel",
-  "tookAScreenshot": "$name$ took a screenshot",
-  "savedTheFile": "Media saved by $name$",
-  "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Previews are supported for most urls",
+  "tookAScreenshot": "$name$ ekran görüntüsü aldı",
+  "savedTheFile": "Medya, $name$ tarafından kaydedildi",
+  "linkPreviewsTitle": "Bağlantı Önizlemelerini Gönder",
+  "linkPreviewDescription": "Çoğu URL için önizleme desteklenir",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsTitle": "Mikrofon",
   "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "İleti kutusuna girilen sözcüklerin denetlenmesini etkinleştir",
@@ -197,10 +197,10 @@
   "timerOption_1_day": "1 gün",
   "timerOption_1_week": "1 hafta",
   "disappearingMessages": "Kaybolan iletiler",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "Takma Adı Değiştir",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "Yeni Takma Ad",
+  "changeNicknameMessage": "Bu kullanıcı için bir takma ad belirleyin",
   "timerOption_0_seconds_abbreviated": "kapalı",
   "timerOption_5_seconds_abbreviated": "5sn",
   "timerOption_10_seconds_abbreviated": "10sn",
@@ -218,30 +218,30 @@
   "youDisabledDisappearingMessages": "Kaybolan iletileri devre dışı bıraktınız",
   "timerSetTo": "Zamanlayıcı $time$ olarak ayarlandı",
   "noteToSelf": "Kendime Not",
-  "hideMenuBarTitle": "Hide Menu Bar",
+  "hideMenuBarTitle": "Menü Çubuğunu Gizle",
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Yeni sohbet başlat…",
   "invalidNumberError": "Geçersiz numara",
   "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
-  "autoUpdateSettingTitle": "Auto Update",
+  "autoUpdateSettingTitle": "Otomatik Güncelleme",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session güncellemesi mevcut",
   "autoUpdateNewVersionMessage": "Session'ın yeni bir sürümü mevcut.",
   "autoUpdateNewVersionInstructions": "Güncellemeleri uygulamak için 'Session'i Yeniden Başlat'a basınız.",
   "autoUpdateRestartButtonLabel": "Session'i Yeniden Başlat",
   "autoUpdateLaterButtonLabel": "Sonra",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "İndir",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "Güncellemeyi indirmek ister misiniz?",
   "leftTheGroup": "$name$ gruptan ayrıldı",
   "multipleLeftTheGroup": "$name$ gruptan ayrıldı",
   "updatedTheGroup": "Grup güncellendi",
   "titleIsNow": "Yeni başlık '$name$'",
   "joinedTheGroup": "$name$ gruba katıldı",
   "multipleJoinedTheGroup": "$names$ gruba katıldı",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
-  "multipleKickedFromTheGroup": "$name$ were removed from the group.",
+  "kickedFromTheGroup": "$name$, gruptan kaldırıldı.",
+  "multipleKickedFromTheGroup": "$name$, gruptan çıkarıldı.",
   "blockUser": "Engelle",
   "unblockUser": "Engeli Kaldır",
   "unblocked": "Engel kaldırıldı",
@@ -251,21 +251,21 @@
   "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Kullanıcının engeli başarıyla kaldırıldı",
   "userUnbanFailed": "Engelini kaldırma başarısız!",
-  "banUser": "Ban User",
-  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUser": "Kullanıcıyı Engelle",
+  "banUserAndDeleteAll": "Engelle ve Tümünü Sil",
   "userBanned": "User banned successfully",
-  "userBanFailed": "Ban failed!",
-  "leaveGroup": "Leave Group",
+  "userBanFailed": "Engelleme başarısız!",
+  "leaveGroup": "Gruptan Ayrıl",
   "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave this group?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
-  "cannotRemoveCreatorFromGroup": "Cannot remove this user",
+  "cannotRemoveCreatorFromGroup": "Bu kullanıcı kaldırılamıyor",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
   "noContactsForGroup": "Henüz herhangi bir kişi yok",
   "failedToAddAsModerator": "Kullanıcı moderatör olarak eklenemedi",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
-  "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
+  "copyMessage": "İleti metnini kopyala",
+  "selectMessage": "İleti seçin",
   "editGroup": "Grubu düzenle",
   "editGroupName": "Grup adını düzenle",
   "updateGroupDialogTitle": "$name$ güncelleniyor...",
@@ -277,31 +277,31 @@
   "changeAccountPasswordDescription": "Şifrenizi değiştirin",
   "removeAccountPasswordTitle": "Hesap Şifresini Kaldır",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
-  "enterPassword": "Please enter your password",
+  "enterPassword": "Lütfen şifrenizi girin",
   "confirmPassword": "Şifreyi Doğrula",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Geçersiz URL",
   "copiedToClipboard": "Panoya kopyalandı",
-  "passwordViewTitle": "Type In Your Password",
+  "passwordViewTitle": "Şifrenizi Yazın",
   "unlock": "Unlock",
-  "password": "Password",
-  "setPassword": "Set Password",
-  "changePassword": "Change Password",
-  "removePassword": "Remove Password",
-  "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
-  "typeInOldPassword": "Please type in your old password",
-  "invalidOldPassword": "Old password is invalid",
-  "invalidPassword": "Invalid password",
-  "noGivenPassword": "Please enter your password",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "setPasswordInvalid": "Passwords do not match",
+  "password": "Şifre",
+  "setPassword": "Şifre Belirle",
+  "changePassword": "Şifreyi Değiştir",
+  "removePassword": "Şifreyi Kaldır",
+  "maxPasswordAttempts": "Geçersiz şifre. Veri tabanını sıfırlamak ister misiniz?",
+  "typeInOldPassword": "Lütfen eski şifrenizi yazın",
+  "invalidOldPassword": "Eski şifre geçersiz",
+  "invalidPassword": "Geçersiz şifre",
+  "noGivenPassword": "Lütfen şifrenizi girin",
+  "passwordsDoNotMatch": "Şifreler uyuşmuyor",
+  "setPasswordInvalid": "Şifreler uyuşmuyor",
   "changePasswordInvalid": "The old password you entered is incorrect",
-  "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "removePasswordInvalid": "Yanlış şifre",
+  "setPasswordTitle": "Şifre Belirle",
+  "changePasswordTitle": "Şifre Değiştirildi",
+  "removePasswordTitle": "Şifre Kaldırıldı",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "removePasswordToastDescription": "You have removed your password.",
@@ -313,18 +313,18 @@
   "passwordLengthError": "Password must be between 6 and 64 characters long",
   "passwordTypeError": "Password must be a string",
   "passwordCharacterError": "Password must only contain letters, numbers and symbols",
-  "remove": "Remove",
+  "remove": "Kaldır",
   "invalidSessionId": "Invalid Session ID",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
   "emptyGroupNameError": "Please enter a group name",
-  "editProfileModalTitle": "Profile",
-  "groupNamePlaceholder": "Group Name",
+  "editProfileModalTitle": "Profil",
+  "groupNamePlaceholder": "Grup Adı",
   "inviteContacts": "Invite Contacts",
   "addModerators": "Add Moderators",
   "removeModerators": "Remove Moderators",
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
-  "add": "Add",
+  "add": "Ekle",
   "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
@@ -335,11 +335,11 @@
   "signIn": "Sign In",
   "startInTrayTitle": "Start in Tray",
   "startInTrayDescription": "Start Session as a minified app ",
-  "yourUniqueSessionID": "Say hello to your Session ID",
+  "yourUniqueSessionID": "Session kimliğinize merhaba deyin",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
-  "createSessionID": "Create Session ID",
-  "recoveryPhrase": "Recovery Phrase",
+  "createSessionID": "Session Kimliği Oluştur",
+  "recoveryPhrase": "Kurtarma Metni",
   "enterRecoveryPhrase": "Enter your recovery phrase",
   "displayName": "Display Name",
   "anonymous": "Anonymous",
@@ -347,9 +347,9 @@
   "enterDisplayName": "Enter a display name",
   "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
-  "linkDevice": "Link Device",
+  "linkDevice": "Cihaz Bağla",
   "restoreUsingRecoveryPhrase": "Restore your account",
-  "or": "or",
+  "or": "veya",
   "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
@@ -358,21 +358,21 @@
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
-  "message": "Message",
-  "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
-  "privacySettingsTitle": "Privacy",
-  "notificationsSettingsTitle": "Notifications",
+  "message": "İleti",
+  "appearanceSettingsTitle": "Görünüm",
+  "permissionSettingsTitle": "İzinler",
+  "privacySettingsTitle": "Gizlilik",
+  "notificationsSettingsTitle": "Bildirimler",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please pick a display name",
-  "members": "$count$ members",
+  "members": "$count$ üye",
   "joinOpenGroup": "Join Open Group",
   "newClosedGroup": "New Closed Group",
-  "createClosedGroupNamePrompt": "Group Name",
+  "createClosedGroupNamePrompt": "Grup Adı",
   "createClosedGroupPlaceholder": "Enter a group name",
   "openGroupURL": "Open Group URL",
   "enterAnOpenGroupURL": "Enter an open group URL",
-  "next": "Next",
+  "next": "Sonraki",
   "invalidGroupNameTooShort": "Please enter a group name",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
@@ -382,7 +382,7 @@
   "userRemovedFromModerators": "User removed from moderator list",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
+  "translation": "Çeviri",
   "closedGroupInviteFailTitle": "Group Invitation Failed",
   "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
   "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
@@ -391,23 +391,23 @@
   "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
   "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
   "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
-  "notificationForConvo": "Notifications",
-  "notificationForConvo_all": "All",
-  "notificationForConvo_disabled": "Disabled",
-  "notificationForConvo_mentions_only": "Mentions only",
-  "onionPathIndicatorTitle": "Path",
+  "notificationForConvo": "Bildirimler",
+  "notificationForConvo_all": "Tümü",
+  "notificationForConvo_disabled": "Devre dışı",
+  "notificationForConvo_mentions_only": "Sadece bahsetmeler",
+  "onionPathIndicatorTitle": "Yol",
   "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
-  "unknownCountry": "Unknown Country",
-  "device": "Device",
+  "unknownCountry": "Bilinmeyen Ülke",
+  "device": "Cihaz",
   "destination": "Destination",
   "learnMore": "Learn more",
   "linkVisitWarningTitle": "Open this link in your browser?",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
-  "open": "Open",
+  "open": "Aç",
   "audioMessageAutoplayTitle": "Audio Message Autoplay",
   "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
   "clickToTrustContact": "Click to download media",
-  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogTitle": "$name$ kullanıcısına güvenilsin mi?",
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Pin Conversation",
   "unpinConversation": "Unpin Conversation",
@@ -426,32 +426,32 @@
   "entireAccount": "Entire Account",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
   "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "iAmSure": "Eminim",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
+  "blockAll": "Tümünü Engelle",
+  "messageRequests": "İleti İstekleri",
+  "requestsSubtitle": "Bekleyen İstekler",
+  "requestsPlaceholder": "İstek yok",
   "messageRequestsDescription": "Enable Message Request Inbox",
   "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
+  "ringing": "Çalıyor...",
   "establishingConnection": "Establishing connection...",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
+  "accept": "Kabul et",
+  "decline": "Reddet",
+  "endCall": "Aramayı sonlandır",
   "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
   "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
   "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found",
+  "callMissedTitle": "Cevapsız arama",
+  "noCameraFound": "Kamera bulunamadı",
+  "noAudioInputFound": "Ses girişi bulunamadı",
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
